media/jellyseerr/jellyseerr-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jellyseerr
  labels:
    kubernetes.io/metadata.name: jellyseerr
    media-ns: authorized
