media/jellyseerr/jellyseerr-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyseerr-ingressroute
  namespace: jellyseerr
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`jellyseerr.ltc.tsphotoclicks.net`)
      services:
        - name: jellyseerr
          port: 5055
  tls:
    secretName: jellyseerr-internal-secret
---
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: jellyseerr
spec:
  selector:
    app: jellyseerr
  ports:
    - port: 5055
      targetPort: 5055
